--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ button {
 .container .two {
     text-align: center;
     max-width: 1200px;
-    margin: 0 auto 40px;
+    margin: 0 auto;
     font-size: 32px;
     font-weight: 700;
     padding: 18px;
@@ -116,6 +116,7 @@ button {
 }
 
 .photos {
+    margin-top: 40px;
     display: flex;
     justify-content: center;
     gap: 52px;
